Refactor unit and integration testing